# simpletracer

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Execution.h  Main.cpp  Makefile  README  README.md  binding.gyp  ezOptionParser.h  libs.sh  package.json  revtracer.h  test-tracer.py  tools.sln
annotated.tracer/: BinLog.cpp  BinLog.h  BitMap.cpp  CMakeLists.txt  Makefile  TrackingExecutor.cpp  annotated.tracer.cpp
corpus.aggregator/: corpus.aggregator.cpp  corpus.aggregator.vcxproj  windirent.h
format.handler/: BinFormat.cpp  CMakeLists.txt  TextFormat.cpp
include/: AbstractLog.h  BinFormat.h  BitMap.h  FileLog.h  TaintedIndex.h  TextFormat.h  TrackingExecutor.h  VariableTracker.h  Z3SymbolicExecutor.h  annotated.tracer.h  basic.observer.h  simple.tracer.h  utils.h
include/CommonCrossPlatform/: Common.h
include/Execution/: Execution.h
include/SymbolicEnvironment/: Environment.h  LargeStack.h  SymbolicEnvironment.h
include/revtracer/: BasicTypes.h  DebugPrintFlags.h  RiverAddress.h  common.h  environment.h  revtracer.h  river.h
libtracer/: CMakeLists.txt  basic.observer.cpp  utils.cpp
libtracer/annotated.tracer/: BitMap.cpp  TaintedIndex.cpp  TrackingExecutor.cpp  annotated.tracer.cpp  annotated.tracer.vcxproj
libtracer/annotated.tracer/tainted.index/: CMakeLists.txt  TaintedIndex.cpp  TrackingExecutor.cpp
libtracer/annotated.tracer/z3/: Z3SymbolicExecutor.cpp  Z3SymbolicFlags.cpp
libtracer/annotated.tracer/z3.executor/: CMakeLists.txt  LargeStack.cpp  SymbolicDemoMain.cpp  Z3SymbolicExecutor.cpp  Z3SymbolicExecutor.h  Z3SymbolicFlags.cpp
libtracer/simple.tracer/: simple.tracer.cpp  simple.tracer.vcxproj
logger/: AbstractLog.cpp  CMakeLists.txt
offline.sanitizers/: CMakeLists.txt  CallStack.cpp  IntervalTree.cpp  SanitizerMain.cpp  TestIntervalTree.cpp  TestZ3Handler.cpp  TraceParser.cpp  Z3Handler.cpp
offline.sanitizers/address.sanitizer/: AddressSanitizer.cpp  CMakeLists.txt
offline.sanitizers/include/: AbstractSanitizer.h  AddressSanitizer.h  CallStack.h  Common.h  IntervalTree.h  TraceParser.h  Z3Handler.h
river.sdk/include/CommonCrossPlatform/: Common.h
river.sdk/include/SymbolicEnvironment/: LargeStack.h
river.tracer/: CMakeLists.txt  river.tracer.cpp
scripts/: clean_build.sh
simple.tracer/: AbstractLog.h  BinFormat.cpp  BinFormat.h  CMakeLists.txt  FileLog.cpp  FileLog.h  simple.tracer.cpp
tracer/: CMakeLists.txt  tracer.cpp
tracer.adnotated/: Execution.h  Main.cpp  tracer.adnotated.vcxproj
tracer.annotated/: BinLog.cpp  BinLog.h  Makefile  tracer.annotated.cpp  tracer.annotated.vcxproj
tracer.simple/: BinFormat.cpp  BinFormat.h  BinLog.cpp  BinLog.h  CMakeLists.txt  Common.h  Logger.cpp  Logger.h  Main.cpp  Makefile  TextFormat.cpp  TextFormat.h  ezOptionParser.h  tracer.simple.cpp  tracer.simple.vcxproj
utils_symexec/: README.md  all_corpus_run.sh  run_example.sh  single_file_all_corpus_run.sh  stub_env_variables.sh
